adding book dto